Bug 168076 - [26.2 CJK vertical Skia] In the vertical writing mode, the 3-point reader turns sideways and moves to the top to overwrite (or be Bold)
Summary: [26.2 CJK vertical Skia] In the vertical writing mode, the 3-point reader tur...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All Windows (All)
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2025-08-23 12:42 UTC by nobu
Modified: 2025-12-28 18:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample png (20.44 KB, image/png)
2025-08-23 13:00 UTC, nobu
Details
sample Writer file (22.83 KB, application/vnd.oasis.opendocument.text)
2025-08-23 13:02 UTC, nobu
Details
sample png (29.70 KB, image/png)
2025-08-23 13:41 UTC, nobu
Details
sample Witer file (29.11 KB, application/vnd.oasis.opendocument.text)
2025-08-23 13:41 UTC, nobu
Details
sample png (45.45 KB, image/png)
2025-09-06 08:02 UTC, nobu
Details
sample file (36.85 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-09-06 08:02 UTC, nobu
Details
Sample GIF (196.76 KB, image/gif)
2025-12-24 03:38 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-08-23 12:42:39 UTC
Description:
In the vertical writing mode, the 3-point reader turns sideways and moves to the top to overwrite.

Steps to Reproduce:
1. Open new Writer.
2. Chage Text direction to Right-to-left (vertical).
3. Insert text "3点…"
   or
   Paste "3点…"

Actual Results:
4. "…" turns horizontal and moves to the top, overlapping "3".

Expected Results:
4. The entries are displayed vertically in the order you enter them.


Reproducible: Always


User Profile Reset: No

Additional Info:

Not reproduced with
[2025-06-27]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 04bd455e36b054001e08a0a3256d508a009ffef3
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Reproducible with
[2025_07_23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Not reproduced with
[2025_08_23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 764799befcb927f68f78e904213e3db7195554cb
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded
Comment 1 nobu 2025-08-23 13:00:29 UTC
Created attachment 202468 [details]
sample png
Comment 2 nobu 2025-08-23 13:02:51 UTC
Created attachment 202469 [details]
sample Writer file

Try open with latest 26.2 version.
Comment 3 nobu 2025-08-23 13:41:20 UTC
Created attachment 202470 [details]
sample png

Sample of 3-point reader placed sparsely.
Comment 4 nobu 2025-08-23 13:41:59 UTC
Created attachment 202471 [details]
sample Witer file
Comment 5 Saburo 2025-08-24 07:53:01 UTC
confirmed
win64-26.2(b83dc4af23e163fb785f57038c6c3f3adefd5088)
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 23a1559e5a75a73671245f76a3a52d3619c9ef39
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

bibisected
first bad commit ce1c352327ca52459c45c194051a777701051f72
      source 027c65e72e49c1c5dae9d6b5f8151cd2d27442a7

commit 027c65e72e49c1c5dae9d6b5f8151cd2d27442a7
author	Xisco Fauli <xiscofauli@libreoffice.org>	Wed Jul 02 14:31:20 2025 +0200

skia: upgrade to m139

File created following the steps in external/skia/README

Change-Id: I562687354075ab7d19afbe108bfd575db034b7c7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187288
Comment 6 Xisco Faulí 2025-08-26 10:28:56 UTC
I upgrade skia m139 to a more recent commit in

commit 035c55e954c227fb7bf689e558b7fff07a061f04	[log]
author	Xisco Fauli <xiscofauli@libreoffice.org>	Mon Aug 25 16:57:11 2025 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Tue Aug 26 11:11:06 2025 +0200
tree 5e4152c065369a93a8be8747c8e5f287fc594342
parent ba462658d955b6d7909f9ffbdfd341f18aff2028 [diff]

skia: upgrade m139 to the latest commit

but it didn't fix the issue
Comment 7 nobu 2025-09-06 08:02:13 UTC
Created attachment 202703 [details]
sample png

Calc Example
---
Vertical text in cells
Text with spaces
Text Box
Comment 8 nobu 2025-09-06 08:02:48 UTC
Created attachment 202704 [details]
sample file
Comment 9 Xisco Faulí 2025-09-30 20:08:40 UTC
Today I upgraded skia to m140 in

commit 9d656704c791e8301d04b2e2caa6be13b564ce98	[log]
author	Xisco Fauli <xiscofauli@libreoffice.org>	Tue Sep 30 12:42:36 2025 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Tue Sep 30 14:10:38 2025 +0200
tree 98311f4b3b6d9c7632eeda54629a01e639f9e24c
parent c5d16f0409e02d6e8bafb8ad58add5a115d13fb7 [diff]

skia: upgrade to m140

but the issue is still reproducible...

@Noel, @Jonathan, the upgrade to skia m139 introduced this issue, unfortunately I'm not familiar with skia at all.
Do you have any idea where the issue might be? Do you think it's an issue in skia or is it an issue on our side?
Comment 10 Noel Grandin 2025-10-01 07:28:18 UTC
> 
> @Noel, @Jonathan, the upgrade to skia m139 introduced this issue,
> unfortunately I'm not familiar with skia at all.
> Do you have any idea where the issue might be? Do you think it's an issue in
> skia or is it an issue on our side?

You could try posting a question on the skia-discuss google group, they are quite helpful. Maybe one of them will recognise the issue.

The issue could be anywhere, but mostly likely on the skia side. Which is not that helpful, because they would want a small standalone test case before they would look at it, and deriving such a test case from our code is essentially impossible.
Comment 11 Jonathan Clark 2025-10-01 17:40:03 UTC
I haven't done much investigation, but what's going on is strange. Specifically when Skia is used, HarfBuzz overlooks the vertical alternate for U+2026 and marks the glyph as non-vertical. That's the proximate cause. I think there may also be a bug in SkiaSalGraphicsImpl::drawGenericLayout() which is causing the overlapped rendering, but that's just being upset by whatever has changed in Skia that's affecting HarfBuzz.

Is it possible we're linking to multiple versions of HarfBuzz or FreeType?

I agree that it would be good to ask the Skia devs for advice.
Comment 12 Commit Notification 2025-12-22 14:28:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/145775f9ac25170c803d2538f807cd06ed8ee654

tdf#168076: fix vertical glyphs position

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 nobu 2025-12-24 03:36:14 UTC
The alignment and rotation issues seem to have been resolved.
However, for some unknown reason, adding "..." to certain parts of a paragraph makes the entire paragraph bold.
Of course, this phenomenon doesn't occur when "Skia" isn't being used.
Since reporting a new bug would be tedious, I hope this can be resolved here.

Bold Problems Reproducible
[2025-12-24]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 14 nobu 2025-12-24 03:38:01 UTC
Created attachment 204784 [details]
Sample GIF

Bold Problems
Comment 15 Xisco Faulí 2025-12-24 11:18:53 UTC
(In reply to nobu from comment #13)
> The alignment and rotation issues seem to have been resolved.
> However, for some unknown reason, adding "..." to certain parts of a
> paragraph makes the entire paragraph bold.
> Of course, this phenomenon doesn't occur when "Skia" isn't being used.
> Since reporting a new bug would be tedious, I hope this can be resolved here.
> 
> Bold Problems Reproducible
> [2025-12-24]
> Version: 26.8.0.0.alpha0+ (X86_64)
> Build ID: 680(Build:0)
> CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster;
> VCL: win
> Locale: ja-JP (ja_JP); UI: ja-JP
> Calc: CL threaded

Please, create a follow-up ticket
Comment 16 Commit Notification 2025-12-28 18:12:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/50171eb5ba7b7b0cfbe9d0cc5577cd8e8b33fa22

tdf#168076: fix vertical glyphs position

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.