tdf#168076: fix vertical glyphs position

Regression after
commit 027c65e72e49c1c5dae9d6b5f8151cd2d27442a7
Author: Xisco Fauli <xiscofauli@libreoffice.org>
Date:   Wed Jul 2 14:31:20 2025 +0200

    skia: upgrade to m139

Adapt code accordingly after
https://skia-review.googlesource.com/c/skia/+/1004298

Change-Id: Ic308c17eeee081f1c44ea089599a8a4ef6b7ca02
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196082
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 145775f9ac25170c803d2538f807cd06ed8ee654)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196098
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>